feat(ansible): Add Desktop and DevOps roles

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -15,6 +15,12 @@
 - name: common-mac
   src: https://github.com/hackwish/ansible-common-mac.git
 
+- name: common-mac-desktop
+  src: https://github.com/hackwish/ansible-common-mac-desktop.git
+
+- name: common-mac-devops-desktop
+  src: https://github.com/hackwish/ansible-common-mac-devops-desktop.git
+
 - name: ohmyzsh
   src: https://github.com/hackwish/ansible-ohmyzsh.git
 
