--- a/ansible/playbooks/mac-devops.yml
+++ b/ansible/playbooks/mac-devops.yml
@@ -11,6 +11,7 @@
     #   - "/usr/local/share/zsh/site-functions"
 
   roles:
-    # - common-devops-mac
+    - common-mac-desktop
+    - common-mac-devops-desktop
 
   tasks:
