--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -23,9 +23,9 @@
           - passlib
           - python-apt
           - requests
-        executable: pip3
+        # executable: pip3
         state: present
-      when: ansible_architecture == "x86_64"     
+      when: ansible_architecture == "x86_64"
 
     - name: Create a 4096-bit SSH key for user root
       user:
