fix(ansible): enable docker role

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -75,8 +75,8 @@
 # - name: andrewrothstein.terraform
 #   src: andrewrothstein.terraform
 
-# - name: docker
-#   src: https://github.com/hackwish/ansible-docker.git
+- name: docker
+  src: https://github.com/hackwish/ansible-docker.git
 
 # - name: rke
 #   src: https://github.com/hackwish/ansible-rke.git
