--- a/ansible/playbooks/devops.yml
+++ b/ansible/playbooks/devops.yml
@@ -18,7 +18,7 @@
     - plank
     - droidcam
     - anydesk
-    - edge-browser
+    #- edge-browser
     - andrewrothstein.vagrant
     - azure-data-studio
     - cloud-sql-proxy
