--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -13,5 +13,10 @@
     - plank
     - droidcam
     - anydesk
-    - edge-browser
+    #- edge-browser
     # - anbox
+    - docker
+
+  tasks:
+    - name: Fix Docker execution without sudo #Issue #7
+      shell: "users=$( getent passwd | awk -F: '$3 > 999 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; done"
