feat(ansible): Update playbooks

--- a/ansible/playbooks/common.yml
+++ b/ansible/playbooks/common.yml
@@ -4,10 +4,10 @@
   roles:
     # - bihealth.python3
     - ohmyzsh
-    - cloudalchemy.node-exporter
+    # - cloudalchemy.node-exporter
     # - netdata
     - common
-  become: yes
+  become: true
 
   tasks:
     # - name: Ensure python Ansible Requirements modules.
