fix(ansible): disable gh

--- a/ansible/playbooks/devops.yml
+++ b/ansible/playbooks/devops.yml
@@ -52,7 +52,7 @@
     - istioctlenv
     - cf-terraforming
     - velero-io
-    - fesaille.gh
+    # - fesaille.gh
     - terraform-docs
     - stern
     - aws-vpn-client
