--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -129,6 +129,9 @@
 # - name: anbox
 #   src: https://github.com/hackwish/ansible-anbox.git
 
+- name: powershell
+  src: https://github.com/hackwish/ansible-powershell.git
+
 - name: fesaille.gh
   src: fesaille.gh
 
