--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -2,7 +2,7 @@ plugins:
   - "@semantic-release/commit-analyzer"
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/exec"
-  # - - "@semantic-release/changelog"
+  - - "@semantic-release/changelog"
   #   - changelogFile: CHANGELOG.md
   - "@semantic-release/git"
   - "@semantic-release/github"
