fix(desktop): add supersonic role

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -16,6 +16,7 @@
     - common-desktop
     - docker
     - droidcam
+    - supersonic
 
   tasks:
     - name: Fix Docker execution without sudo #Issue #7
