--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -99,6 +99,9 @@ roles:
 - name: velero-io
   src: https://github.com/hackwish/ansible-velero-io.git
 
+- name: supersonic
+  src: https://github.com/hackwish/ansible-supersonic.git
+
 # Community roles
 - name: andrewrothstein.sops
   src: andrewrothstein.sops
