fix(ansible): add feishin

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -102,6 +102,9 @@ roles:
 - name: supersonic
   src: https://github.com/hackwish/ansible-supersonic.git
 
+- name: feishin
+  src: https://github.com/hackwish/ansible-feishin.git
+
 # Community roles
 - name: andrewrothstein.sops
   src: andrewrothstein.sops
