--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -9,6 +9,7 @@
 
   roles:
   - common-desktop
+  - brew
   - docker
   - droidcam
   - supersonic
@@ -16,4 +17,4 @@
 
   tasks:
   - name: Fix Docker execution without sudo #Issue #7
-    shell: "users=$( getent passwd | awk -F: '$3 > 999 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; dontrue"
+    shell: "users=$( getent passwd | awk -F: '$3 > 999 {print $1}' );for user in $users; do sudo usermod -a -G docker $user; done"
