fix(desktop-install): remove supersonic for change on url package by source

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -12,7 +12,7 @@
   - brew
   - docker
   - droidcam
-  - supersonic
+  # - supersonic - temporal disable for change on install definition by source
   - feishin
 
   tasks:
