fix(desktop): disable feishin role

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -13,7 +13,7 @@
   - docker
   - droidcam
   # - supersonic - temporal disable for change on install definition by source
-  - feishin
+  # - feishin
 
   tasks:
   - name: Fix Docker execution without sudo #Issue #7
