fix(tasks): update packages

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,7 +1,9 @@
 collections:
 - ansible.posix
 - community.docker
+# - community.general
 - community.sops
+- kubernetes.core
 
 - name: community.general
   version: 6.0.0
