feat(ansible): Add LMStudio role

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -12,6 +12,7 @@
   - brew
   - docker
   - droidcam
+  - lmstudio
   # - supersonic - temporal disable for change on install definition by source
   # - feishin
 
