feat(ansible): Add input leap role

--- a/ansible/playbooks/desktop.yml
+++ b/ansible/playbooks/desktop.yml
@@ -13,6 +13,7 @@
   - docker
   - droidcam
   - lmstudio
+  - inputleap
   # - supersonic - temporal disable for change on install definition by source
   # - feishin
 
